# email-client

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
email_client/: __init__.py  client.py
tests/: test_email_client.py
