[tool.poetry]
name = "email-client"
version = "0.1.0"
description = "A lightweight, Python-based email client designed to simplify the process of composing and sending emails programmatically."
authors = ["Olivier Bénard"]
license = "MIT"
readme = "README.md"
packages = [ {include = "email_client"} ]

[tool.poetry.dependencies]
python = "^3.12"
black = "^25.1.0"
mypy = "^1.14.1"
pylint = "^3.3.4"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
